[package]
name = "archive_cat"
version = "0.1.0"
description = "a mega program for document management"
authors = ["jankstar <jankstar.berlin@gmail.com>"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }

serde_json = { version = "1.0", features = ["raw_value"] }
home = "0.5.5"
diesel = { version = "2.1.0", features = ["sqlite", "64-column-tables"] }
dotenvy = "0.15.7"
chrono = "0.4.26"
url = "2.4.0"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
base64 = "0.22.1"
imap = "3.0.0-alpha.12"
oauth2 = "4.4.1"
imap-proto = "0.16.2"
mailparse = "0.15.0"
dotenv = "0.14.1"
regex = "1.9.4"
yaml-rust = "0.4.4"
unicode-normalization = "0.1.22"
pdf-extract = "0.7.2"
lopdf = "0.32.0"
timer = "0.2.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", version = "0.0.0" }
unicode-truncate = "1.1.0"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
hyper-tls = "0.6.0"
reqwest = "0.12.8"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
